--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "target": "ES6",
-      "sourceMap": true,
-      "experimentalDecorators": true,
-      "outDir": "./js/",
-      "watch": true
-    },
-    "moduleResolution": "node",
-    "exclude": [
-      "node_modules",
-      "view"
-    ]
-  }
+  "compilerOptions": {
+    "strict": true,
+    "module": "commonjs",
+    "target": "ES6",
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "outDir": "./js/",
+    "watch": true
+  },
+  "moduleResolution": "node",
+  "exclude": ["node_modules", "view"]
+}
